/**
 * @author Japhy
 * @since 2020/11/11 16:24
 */
public interface BlackSmith {

    Weapon manufacture(WeaponType weaponType);
}
