/**
 * @author Japhy
 * @since 2020/11/11 16:19
 */
public interface Weapon {

    WeaponType getWeaponType();
}
